[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/models/misc/hanger_bay_door.glb" type="PackedScene" id=1]
[ext_resource path="res://scenes/Misc/hanger_bay_door.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=5]
size = Vector3( 6, 10, 10 )

[sub_resource type="Animation" id=6]
resource_name = "Open"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("hanger_bay_door/left_top_door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -1.39904, -0.179563, 0 ), Vector3( -4.094, -0.179563, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hanger_bay_door/right_top_door:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.40049, -0.179563, 0 ), Vector3( 4.4421, -0.179563, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hanger_bay_door/top_bottom_door:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.256895, -2.54486 ), Vector3( 0, -0.256895, -7.00125 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hanger_bay_door/bottom_bottom_door:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.256895, 2.5447 ), Vector3( 0, -0.256895, 7.9178 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hanger_bay_door/hanger_lift:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -10, 0 ), Vector3( 0, -0.189, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("hanger_bay_door/left_top_door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -1.39904, -0.179563, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hanger_bay_door/right_top_door:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.40049, -0.179563, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hanger_bay_door/top_bottom_door:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.256895, -2.54486 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hanger_bay_door/bottom_bottom_door:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.256895, 2.5447 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hanger_bay_door/hanger_lift:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -10, 0 ) ]
}

[node name="hanger_bay_door" type="CSGMesh"]
operation = 2
invert_faces = true
mesh = SubResource( 5 )
script = ExtResource( 4 )

[node name="hanger_bay_door" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.01498, 0 )

[node name="hanger_lift" parent="hanger_bay_door" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0352483, 0.999379, 0, -0.999379, 0.0352483, 0, 10.7324, 0 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="hanger_bay_door"]
